refactor: refactoring some issues on project

--- a/weatherappmodule/src/main/res/values/strings.xml
+++ b/weatherappmodule/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_not_data">Data is not available</string>
     <string name="text_do_not_determinate">Cannot determine your current location</string>
-    <string name="text_allow_access">Allow Access</string>
+    <string name="text_allow_access">Allow access</string>
     <string name="permission_needed_dialog_title">Permission needed</string>
     <string name="message_needed_location_permission">Location Permission needed to get local forecast</string>
     <string name="positive_button_name">Open Setting</string>
